    CHANGED: quickfilter expands wildcards
    CHANGED: duplicate tab / open in new tab:
             create the new tab next to the current one.
    CHANGED: filter settings are saved/restored individually for each tab.
    CHANGED: filter settings are remembered when changing view type
    CHANGED: All view settings are saved/restored individually for each tab.

    FIXED: [ 229489 ] Seg fault moving ISO image files from USB Flash drive to USB SATA HD
           - thanks to Anssi Hannula
    FIXED: mountman gui might add the same mountpoint to the list multiple times
    FIXED: [ 3044425 (sf.net) ] Desktop freeze when opening a context menu
    FIXED: [ 217203 ] Krusader crashed when accessing sftp after resume from sleep
    FIXED: [ 243716, 270605, 270588 ] crash when moving files
    FIXED: [ 256794 ] crash when file is deleted while a preview is being loaded for it
           (and it is the only file for which a preview is being loaded)
    FIXED: [ 274732 ] Weird functionality after "directory doesn't exist"
    FIXED: [ 3216624 (sf.net) ] Krusader saves newly created files with incorrect permissions
    FIXED: [ 2773302 (sf.net) ] krarc can't handle brackets in file paths inside ZIP archive
    FIXED: [ 272876, 274269 ] crash when refreshing view
    FIXED: [ 3191155 (sf.net) ] Moving a symbolic link changes attributes of target file
    FIXED: [ 2998795 (sf.net) ] "Show actions toolbar" setting is not saved
    FIXED: Url commandline argument opens a new tab instead of switching to an existing one
    FIXED: root mode action does not work with newer versions of kdesu, thanks to CyberCastle
    FIXED: switching tabs sometimes doesn't switch the panel
    FIXED: [ 3004510 (sf.net) ] Double-clicking executables start in ~/Documents folder
    FIXED: [ 2996188 (sf.net) ] relative path for custom folder icon doesn't work
    FIXED: [ 2915020 (sf.net) ] wrong icon for directory symlink
    FIXED: when switching tabs, sometimes the new tab isn't set active