@@ -28,6 +28,8 @@
     CHANGED: filter settings are remembered when changing view type
     CHANGED: All view settings are saved/restored individually for each tab.
 
+    FIXED: [ 262761 ] krusader crashed on viewing text file with internal viewer
+           this was probably already fixed in 2.3.0-beta1
     FIXED: [ 229489 ] Seg fault moving ISO image files from USB Flash drive to USB SATA HD
            - thanks to Anssi Hannula
     FIXED: mountman gui might add the same mountpoint to the list multiple times
